update personel register and update vol request for volunteer user

--- a/app/src/main/res/layout/activity_tool_register_info.xml
+++ b/app/src/main/res/layout/activity_tool_register_info.xml
@@ -132,6 +132,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Güncelle"
+        android:textColor="#FFFFFF"
         app:backgroundTint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
