--- a/app/src/main/res/layout/activity_volunteer_camera_galery.xml
+++ b/app/src/main/res/layout/activity_volunteer_camera_galery.xml
@@ -24,6 +24,7 @@
         android:layout_height="45dp"
         android:onClick="ClickCameraBtn"
         android:text="Kamera"
+        android:textColor="#FFFFFF"
         app:backgroundTint="#352D20"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,6 +39,7 @@
         android:layout_height="45dp"
         android:onClick="ClickGaleryBtn"
         android:text="Galeri"
+        android:textColor="#FFFFFF"
         app:backgroundTint="#352D20"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
