Added Icons to Personnel Main Screen. Quick Fixes
Icons added to personnel main screen.
Quick fixes for navigation bar and redirection fixes.

--- a/app/src/main/res/layout/activity_authorized__notification.xml
+++ b/app/src/main/res/layout/activity_authorized__notification.xml
@@ -1,29 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/auth_drawer_layout"
     >
-    <include
-        layout="@layout/activity_tool_bar">
-    </include>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <Button
-        android:textColor="@color/black"
-        android:id="@+id/auth_geri_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Geri"
-        app:backgroundTint="#BFBFBF"
-        tools:ignore="MissingConstraints">
+    <include layout="@layout/activity_tool_bar"></include>
 
-    </Button>
+
     <ScrollView
 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="60dp"
         android:background="@color/white"
         tools:ignore="MissingConstraints"
         app:layout_constraintTop_toBottomOf="@id/history_geri_button">
@@ -43,10 +37,18 @@
     </ScrollView>
 
 
+    </LinearLayout>
+    <RelativeLayout
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/white">
 
+        <include layout="@layout/activity_authorized_nav_drawer" />
 
+    </RelativeLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
 
 
 
