--- a/app/src/main/res/layout/activity_personel_nav_drawer.xml
+++ b/app/src/main/res/layout/activity_personel_nav_drawer.xml
@@ -107,31 +107,7 @@
             android:layout_marginRight="48dp" />
 
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:onClick="ClickPersonelNotification">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Bildirim (*)"
-            android:padding="12dp"
-            android:layout_marginStart="16dp"
-            tools:ignore="Suspicious0dp"
-            android:layout_marginLeft="16dp">
 
-        </TextView>
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="48dp"
-            android:src="@drawable/ic_notifications"
-            android:layout_marginRight="48dp" />
-
-    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -142,7 +118,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Görev Bilgi Ekranı (*)"
+            android:text="Görev Bilgi Ekranı"
             android:padding="12dp"
             android:layout_marginStart="16dp"
             tools:ignore="Suspicious0dp"
@@ -176,7 +152,12 @@
             android:layout_marginLeft="16dp">
 
         </TextView>
-
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="48dp"
+            android:src="@drawable/ic_assignment"
+            android:layout_marginRight="48dp" />
 
     </LinearLayout>
 
