#9 Team optimization component finished.
Create a component that optimize the team assign and create from personnel users is finished. A structure was created to assign personnel to subpart in the most optimal way. The structure that allows post-calculation assignments to be made according to the determined subpart and determined manpower was produced. Also in pre-made pars, some bugs fixed.

--- a/app/src/main/res/layout/activity_authorized_nav_drawer.xml
+++ b/app/src/main/res/layout/activity_authorized_nav_drawer.xml
@@ -165,7 +165,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Ekipmanlar"
+            android:text="Akıllı Atama"
             android:padding="12dp"
             android:layout_marginStart="16dp"
             tools:ignore="Suspicious0dp"
