--- a/app/src/main/res/layout/activity_personel__information.xml
+++ b/app/src/main/res/layout/activity_personel__information.xml
@@ -15,9 +15,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:background="@color/white"
         >
         <include
-            layout="@layout/activity_tool_bar">
+            layout="@layout/activity_tool_bar"
+            >
         </include>
 
         <LinearLayout
@@ -31,7 +33,7 @@
 
             >
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#BFBFBF"
                 android:orientation="horizontal"
@@ -42,6 +44,7 @@
                     android:layout_height="wrap_content"
                     android:background="#BFBFBF"
                     android:orientation="vertical"
+                    android:layout_weight="1"
 
                     >
                     <TextView
@@ -49,6 +52,7 @@
                         android:layout_height="wrap_content"
                         android:text="Takım No :"
                         android:textColor="#050505"
+                        android:gravity="center"
                         android:textSize="25sp"
                         android:textStyle="bold" />
                     <TextView
@@ -56,23 +60,26 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="Yok"
+                        android:background="@drawable/background_round"
+                        android:gravity="center"
                         android:layout_gravity="center"
                         android:textColor="#050505"
                         android:textSize="20sp"
                         android:textStyle="bold" />
                 </LinearLayout>
-
                 <Space
-                    android:layout_width="100dp"
-                    android:layout_height="10dp">
+                    android:layout_width="5dp"
+                    android:layout_height="wrap_content">
 
                 </Space>
+
 
                 <LinearLayout
                     android:layout_width="132dp"
                     android:layout_height="wrap_content"
                     android:background="#BFBFBF"
                     android:orientation="vertical"
+                    android:layout_weight="1"
 
                     >
                     <TextView
@@ -80,6 +87,7 @@
                         android:layout_height="wrap_content"
                         android:text="Afet No :"
                         android:textColor="#050505"
+                        android:gravity="center"
                         android:textSize="25sp"
                         android:textStyle="bold" />
                     <TextView
@@ -87,11 +95,14 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:gravity="center"
                         android:text="Yok"
+                        android:background="@drawable/background_round"
                         android:textColor="#050505"
                         android:textSize="20sp"
                         android:textStyle="bold" />
                 </LinearLayout>
+
             </LinearLayout>
             <TextView
                 android:layout_width="match_parent"
@@ -104,7 +115,8 @@
                 android:id="@+id/Team_my_role"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+                android:background="@drawable/background_round"
+                android:gravity="center"
                 android:text="Yok"
                 android:textColor="#050505"
                 android:textSize="20sp"
@@ -129,7 +141,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="fill_parent"
                     android:text="Yok"
-                    android:background="#BFBFBF"
+                    android:background="@drawable/background_round"
+                    android:gravity="center"
                     android:textColor="#050505"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -158,7 +171,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="fill_parent"
                     android:text="Yok"
-                    android:background="#BFBFBF"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:background="@drawable/background_round"
                     android:textColor="#050505"
                     android:textSize="20sp"
                     android:textStyle="bold"
@@ -192,8 +207,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Yok"
-                android:layout_gravity="center"
-                android:background="#BFBFBF"
+                android:background="@drawable/background_round"
+                android:gravity="center"
                 android:textColor="#050505"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -209,7 +224,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Yok"
-                android:layout_gravity="center"
+                android:background="@drawable/background_round"
+                android:gravity="center"
                 android:textColor="#050505"
                 android:textSize="20sp"
                 android:textStyle="bold" />
@@ -231,7 +247,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#BFBFBF"
-                android:text="Takımdaki Elemanları :"
+                android:text="Takımdaki Elemanlar :"
                 android:textColor="#050505"
                 android:textSize="25sp"
                 android:textStyle="bold" />
@@ -240,7 +256,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:scrollbars="vertical"
-                android:background="#BFBFBF"
+                android:background="@color/white"
                 android:layout_weight="1"
                 >
                 <LinearLayout
@@ -248,7 +264,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="fill_parent"
                     android:text="Yok"
-                    android:background="#BFBFBF"
+                    android:background="@color/white"
                     android:textColor="#050505"
                     android:textSize="20sp"
                     android:textStyle="bold"
