on BackPressed updates, and create_subpart_on_map updated. Some improvements made
change all Authorized classes onBackPressed method. create_subpart_on_map updated. Some improvements made.

--- a/app/src/main/res/layout/activity_authorized_nav_drawer.xml
+++ b/app/src/main/res/layout/activity_authorized_nav_drawer.xml
@@ -160,7 +160,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:onClick="ClickAuthorizedEkipman">
+        android:onClick="ClickAuthorizedSmartAssign">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
