--- a/app/src/main/res/layout/activity_tool_participate_form.xml
+++ b/app/src/main/res/layout/activity_tool_participate_form.xml
@@ -174,6 +174,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Gönder"
+        android:textColor="#FFFFFF"
         app:backgroundTint="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
